Changelog
=========


1.10.2 (unreleased)
-------------------

- Nothing changed yet.


1.10.1 (2015-07-27)
-------------------

- Use "now" as default of "freeze".
  [jone]


1.10.0 (2015-05-18)
-------------------

- Update the freezed time with ``forward`` and ``backward``.
  [jone]


1.9.1 (2015-05-15)
------------------

- Fix site hook within ``staticuid`` decorated methods.
  [jone]


1.9.0 (2015-05-15)
------------------

- Add ``staticuid`` decorator for having static uids.
  [jone]


1.8.1 (2015-01-05)
------------------

- Declare missing dependency to p.a.testing
  required by the COMPONENT_REGISTRY_ISOLATION layer.
  [jone]


1.8.0 (2014-12-31)
------------------

- Implement console script testing layer.
  [jone]

- Implement TEMP_DIRECTORY testing layer.
  [jone]

- Implement COMPONENT_REGISTRY_ISOLATION layer.
  [jone]


1.7.0 (2014-09-30)
------------------

- Add patcher for disabling quickinstaller snappshotting in tests.
  [jone]


1.6.4 (2014-05-01)
------------------

- Generic Setup uninstall test: Add a second test that uses Portal Setup for
  uninstallation. This makes sure that Portal Setup uninstallation behaves the same as
  quickinstaller uninstallation.
  [deif]


1.6.3 (2014-04-30)
------------------

- Generic Setup uninstall test: Remove is_product option, since we
  require an uninstall external method which requires the package
  to be a product anyway.
  [jone]

- Generic Setup uninstall test: test that there is an uninstall external method.
  Uninstall external methods are still necessary today for properly uninstalling
  a package.
  [jone]


1.6.2 (2014-04-30)
------------------

- Generic Setup test: use quickinstaller for uninstalling.
  [jone]


1.6.1 (2014-04-29)
------------------

- Also install profile dependencies before creating a snapshot.
  [deif]


1.6.0 (2014-04-29)
------------------

- Implement Generic Setup uninstall base test.
  [jone]


1.5.2 (2014-02-09)
------------------
