@@ -5,7 +5,8 @@ Changelog
 1.10.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Added timezone(`tz`) support for "freeze".
+  [phgross]
 
 
 1.10.1 (2015-07-27)
